Sale point finishing edit

--- a/src/app/structure/structure.component.html
+++ b/src/app/structure/structure.component.html
@@ -30,6 +30,20 @@
         <a [routerLink]="['/receipt']">
             <li><button mat-button>Recibos</button></li>
         </a>
+        <a [routerLink]="['/events']">
+            <li><button mat-button>Eventos</button></li>
+        </a>
+        <a [routerLink]="['/sale-point']">
+            <li><button mat-button>Punto de Venta</button></li>
+        </a>
+
+        <a [routerLink]="['/inventory']">
+            <li><button mat-button>Inventario</button></li>
+        </a>
+
+        <a [routerLink]="['/sales']">
+            <li><button mat-button>Registro de Ventas</button></li>
+        </a>
 
     </ul>
     <h5>USUARIO</h5>
