sale point works very well

--- a/src/app/receipt/create-reciept/create-reciept.component.html
+++ b/src/app/receipt/create-reciept/create-reciept.component.html
@@ -37,7 +37,7 @@
                             <option value="2">Inscripcion</option>
                             <option value="3">Días</option>
                             <option value="4">Uniforme</option>                                                
-                            <option value="5">Evento/Viajes/Otros</option>                                                
+                            <!-- <option value="5">Evento/Viajes/Otros</option>                                                 -->
                     </select>
 
                 </div>
