problñema de descuentro y caja resuelto

--- a/src/app/receipt/create-reciept/create-reciept.component.html
+++ b/src/app/receipt/create-reciept/create-reciept.component.html
@@ -31,7 +31,7 @@
 
                 <div>
 
-                    <label>Tipo de usuario:</label><br>
+                    <label>Tipo de pago:</label><br>
                     <select [(ngModel)]="payment.type" name="type">
                             <option value="1">Mensualidad</option> 
                             <option value="2">Inscripcion</option>
