--- a/src/app/structure/structure.component.css
+++ b/src/app/structure/structure.component.css
@@ -120,7 +120,7 @@ nav button {
     display: block;
     min-height: 85vh;
     font-weight: 300px;
-    position: ;
+    margin-bottom: 80px;
 }
 
 .notified {
