--- a/src/app/sale-point/sale-point.component.html
+++ b/src/app/sale-point/sale-point.component.html
@@ -7,7 +7,7 @@
         <select [(ngModel)]="sale.type" name="type" (change)="checkPrices()">
             <option value="1">Público</option> 
             <option value="2">Interno</option>
-            <option value="3">Interno Quincena</option>                                                           
+            <!-- <option value="3">Interno Quincena</option>                                                            -->
             
     </select>
 
