Creacion de historial altas y bajas

--- a/src/app/receipt/create-reciept/create-reciept.component.html
+++ b/src/app/receipt/create-reciept/create-reciept.component.html
@@ -35,7 +35,7 @@
                     <select [(ngModel)]="payment.type" name="type">
                             <option value="1">Mensualidad</option> 
                             <option value="2">Inscripcion</option>
-                            <option value="3">Días</option>
+                            <!-- <option value="3">Días</option> -->
                             <option value="4">Uniforme</option>                                                
                             <!-- <option value="5">Evento/Viajes/Otros</option>                                                 -->
                     </select>
