--- a/src/app/receipt/receipt.component.html
+++ b/src/app/receipt/receipt.component.html
@@ -64,7 +64,7 @@
 </div>
 
 
-<a [routerLink]="['/receipt/create']">
+<a (click)="redirectCreateUser()">
     <div class="botonFloat">
         <a class="botonA" matTooltip="Crear recibo"><i class="material-icons">add</i></a>
     </div>
