--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -21,7 +21,7 @@
             <!-- <th colspan="3">Opciones</th> -->
         </thead>
         <tbody>
-            <tr *ngFor="let user of users" [routerLink]="['/users/show', user.id]">
+            <tr *ngFor="let user of users" [routerLink]="['/users/show', user.id]" [ngClass]="{ 'status2': user.status == 2 , 'status3': user.status == 3 }">
                 <td class="left">{{ user.name }}</td>
                 <td *ngIf="user.user_type_id == 1">Alumno</td>
                 <td *ngIf="user.user_type_id == 2">Maestro</td>
