--- a/src/app/receipt/receipt.component.css
+++ b/src/app/receipt/receipt.component.css
@@ -16,3 +16,19 @@
     background: rgb(199, 92, 5);
     cursor: pointer;
 }
+
+.linkExcel {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: flex;
+}
+
+.linkExcel p {
+    display: block;
+}
+
+.linkExcel img {
+    height: 35px;
+    margin-left: 20px;
+}
