--- a/src/app/receipt/receipt.component.html
+++ b/src/app/receipt/receipt.component.html
@@ -1,68 +1,78 @@
 <mat-progress-bar mode="indeterminate" *ngIf="sendingData.notifications" class="barLoader"></mat-progress-bar>
 <mat-progress-bar mode="indeterminate" *ngIf="sendingData.receipts" class="barLoader"></mat-progress-bar>
-<h3>Recibos de Alumnos </h3>
 
-<div *ngIf="notifications.on" class="notifyReceipt">
-    <h5>Notificaciones</h5>
-    <div>
-        <p>Hay #{{ notifications.debtorsMonthly }} alumnos con pagos pendientes de este mes.
-            <span (click)="notifications.viewDebtors = !notifications.viewDebtors">Ver Alumnos</span>
-        </p>
+<div class="relative">
 
-        <div *ngIf="notifications.viewDebtors" id="debtors">
-            <p *ngFor="let deb of notifications.debtors" (click)="debtorPay(deb.id)"> {{ deb.name }}</p>
+    <h3>Recibos de Alumnos </h3>
+
+    <a class="linkExcel" href="{{ storage.getUrl() + 'excel/receipt' +storage.getTokenUrl() }}
+    &from={{ search.from }}&to={{ search.to }}&id={{ search.id }}">
+        <p>Exportar a Excel</p>
+        <img src="http://icons.iconarchive.com/icons/graphicloads/filetype/256/excel-xls-icon.png">
+    </a>
+
+    <div *ngIf="notifications.on" class="notifyReceipt">
+        <h5>Notificaciones</h5>
+        <div>
+            <p>Hay #{{ notifications.debtorsMonthly }} alumnos con pagos pendientes de este mes.
+                <span (click)="notifications.viewDebtors = !notifications.viewDebtors">Ver Alumnos</span>
+            </p>
+
+            <div *ngIf="notifications.viewDebtors" id="debtors">
+                <p *ngFor="let deb of notifications.debtors" (click)="debtorPay(deb.id)"> {{ deb.name }}</p>
+            </div>
+            <!-- <p>Hay #{{ notifications.debtorsInscription }} alumnos con inscripciones pendientes de este mes.</p> -->
         </div>
-        <!-- <p>Hay #{{ notifications.debtorsInscription }} alumnos con inscripciones pendientes de este mes.</p> -->
+
+    </div>
+
+    <input [(ngModel)]="search.from" name="from" type="date">
+    <input [(ngModel)]="search.to" name="to" type="date">
+
+    <div class="search">
+
+        <input [(ngModel)]="search.name" [matAutocomplete]="auto" name="name" type="search" placeholder="Buscar Usuario" (keyup)="searchInput()">
+
+        <mat-autocomplete #auto="matAutocomplete">
+            <mat-option *ngFor="let sugest of sugests" [value]="sugest.name" (onSelectionChange)="searchReceiptId(sugest.id)">
+                {{ sugest.name }}
+            </mat-option>
+        </mat-autocomplete>
+    </div>
+
+    <button (click)="getReceipts()">BUSCAR</button>
+
+    <div class="responsive-table">
+        <table align="center">
+            <thead>
+                <tr>
+                    <!-- <th class="left">id</th> -->
+                    <th>Alumno</th>
+                    <th>Fecha</th>
+                    <th>Monto</th>
+                    <th>Tipo</th>
+                </tr>
+                <!-- <th colspan="3">Opciones</th> -->
+            </thead>
+            <tbody>
+                <tr *ngFor="let re of receipts">
+                    <td class="left">{{ re.user_name }}</td>
+                    <td>{{ re.created_at }}</td>
+                    <td>$ {{ re.amount }}</td>
+                    <td *ngIf="re.type == 1">Mensualidad</td>
+                    <td *ngIf="re.type == 2">Inscripcion</td>
+                    <td *ngIf="re.type == 3">Día</td>
+                    <td *ngIf="re.type == 4">Uniforme</td>
+                    <td *ngIf="re.type == 5">Evento</td>
+
+                </tr>
+            </tbody>
+        </table>
+        <mat-paginator (page)="pageAction($event)" [length]="search.total" [pageSize]="search.items" [pageSizeOptions]="[5, 10, 25, 50, 100]">
+        </mat-paginator>
     </div>
 
 </div>
-
-<input [(ngModel)]="search.from" name="from" type="date">
-<input [(ngModel)]="search.to" name="to" type="date">
-
-<div class="search">
-
-    <input [(ngModel)]="search.name" [matAutocomplete]="auto" name="name" type="search" placeholder="Buscar Usuario" (keyup)="searchInput()">
-
-    <mat-autocomplete #auto="matAutocomplete">
-        <mat-option *ngFor="let sugest of sugests" [value]="sugest.name" (onSelectionChange)="searchReceiptId(sugest.id)">
-            {{ sugest.name }}
-        </mat-option>
-    </mat-autocomplete>
-</div>
-
-<button (click)="getReceipts()">BUSCAR</button>
-
-<div class="responsive-table">
-    <table align="center">
-        <thead>
-            <tr>
-                <!-- <th class="left">id</th> -->
-                <th>Alumno</th>
-                <th>Fecha</th>
-                <th>Monto</th>
-                <th>Tipo</th>
-            </tr>
-            <!-- <th colspan="3">Opciones</th> -->
-        </thead>
-        <tbody>
-            <tr *ngFor="let re of receipts">
-                <td class="left">{{ re.user_name }}</td>
-                <td>{{ re.created_at }}</td>
-                <td>$ {{ re.amount }}</td>
-                <td *ngIf="re.type == 1">Mensualidad</td>
-                <td *ngIf="re.type == 2">Inscripcion</td>
-                <td *ngIf="re.type == 3">Día</td>
-                <td *ngIf="re.type == 4">Uniforme</td>
-                <td *ngIf="re.type == 5">Evento</td>
-
-            </tr>
-        </tbody>
-    </table>
-    <mat-paginator (page)="pageAction($event)" [length]="search.total" [pageSize]="search.items" [pageSizeOptions]="[5, 10, 25, 50, 100]">
-    </mat-paginator>
-</div>
-
 
 <a (click)="redirectCreateUser()">
     <div class="botonFloat">
