Sale Debtors search work

--- a/src/app/structure/structure.component.html
+++ b/src/app/structure/structure.component.html
@@ -52,6 +52,12 @@
             <li><button mat-button>Registro de Ventas</button></li>
         </a>
 
+
+        <a [routerLink]="['/sale-debt']">
+            <li><button mat-button>Deudores Abarrotería</button></li>
+        </a>
+
+
         <a [routerLink]="['/expenses']">
             <li><button mat-button>Gastos</button></li>
         </a>
