Admin can change amount en mensuality

--- a/src/app/receipt/receipt.component.html
+++ b/src/app/receipt/receipt.component.html
@@ -76,7 +76,7 @@
 
 </div>
 
-<a (click)="redirectCreateUser()">
+<a (click)="redirectCreateUser()" [routerLink]="['receipt/create']">
     <div class="botonFloat">
         <a class="botonA" matTooltip="Crear recibo"><i class="material-icons">add</i></a>
     </div>
